Add Comments and styling to the index page

--- a/VideoStoreManagement/Pages/Shared/_Layout.cshtml
+++ b/VideoStoreManagement/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
             </div>
         </nav>
     </header>
+
+    <!-- 
+     * Each page will look diffrent. 
+    -->
+
+
     <!--<div class="container">-->
     <!--<main role="main" class="pb-3">
        -->
