--- a/VideoStoreManagement/Pages/Index.cshtml
+++ b/VideoStoreManagement/Pages/Index.cshtml
@@ -3,6 +3,33 @@
 @{
     ViewData["Title"] = "Home page";
 }
-        
-<img src="~/img/videoStore.jpg" alt="" />
-        
+
+
+<style>
+    body {
+        animation: fadeInAnimation ease 3s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+    }
+
+    @@keyframes fadeInAnimation {
+        0% {
+            /* opacity: 0; */
+            clip-path: polygon(0 0, 41% 49%, 0 100%, 49% 53%, 100% 100%, 54% 50%, 100% 0, 49% 45%);
+        }
+
+        100% {
+            /* opacity: 1;*/
+            clip-path: polygon(0 0, 0 49%, 0 100%, 54% 100%, 100% 100%, 100% 50%, 100% 0, 51% 0);
+        }
+    }
+</style>
+
+<div>
+    <main role="main">
+        <h1 style="text-align: center; "> Welcome To Video Bustores </h1>
+        <img src="~/img/videoStore.jpg" alt="" />
+</main>
+</div>
+
+
